update/Swagger-controllers-with-Ingredients-table
